# trade-gpt

./: Dockerfile  README.md  ict-indicator.lua  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
app/: main.py
app/config/: market_schedule.py
app/core/: config.py  logger.py  runner.py
app/routers/: chart_routes.py  news.py
app/scheduler/: market_scheduler.py
app/schemas/: news.py
app/services/: chart_service.py  news_service.py
docs/: PRD.md  action-list.md  fundamental-analysis.md  ict-high-probability-trade.md  ict.md  key-indicator.md  knowledge-base.md  technical-analysis.md  titip.md  trading-strategies.md
docs/diagrams/: ict-strategy-flow.puml  trade-signal-bot.puml
